--- a/style/all/sausage.css
+++ b/style/all/sausage.css
@@ -22,7 +22,7 @@
 }
 .sausage-hover,
 .sausage-current {
-    background-color: #f2e4ed;
+    background-color: #F3E5E6;
     -moz-box-shadow: inset 0px 1px 2px 4px rgba(51, 63, 70, 0.025);
 }
 .sausage-span {
